update to newer java version and add assertj support