@@ -5,7 +5,7 @@ package net.amygdalum.xrayinterface;
 public class LockedObject extends LockedSuper {
 
 	@SuppressWarnings("unused")
-	private final int integer = new Integer(2).intValue();
+	private final int integer = Integer.valueOf(2).intValue();
 	private String myField;
 	
 	private int myMethod(String string, boolean flag) {
